--- a/ARS3/ARS3.csproj
+++ b/ARS3/ARS3.csproj
@@ -130,6 +130,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202104170714356_addTable.cs" />
+    <Compile Include="Migrations\202104170714356_addTable.Designer.cs">
+      <DependentUpon>202104170714356_addTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AdminLogic.cs" />
     <Compile Include="Models\ContextCS.cs" />
@@ -187,6 +191,11 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202104170714356_addTable.resx">
+      <DependentUpon>202104170714356_addTable.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
