--- a/ARS3/Web.config
+++ b/ARS3/Web.config
@@ -67,6 +67,6 @@
     </providers>
   </entityFramework>
 	<connectionStrings>
-		<add name="cs" connectionString="Data source=.; Initial Catalog=DbARS; user id=sa; password=123" providerName="System.Data.SqlClient"/>
+		<add name="cs" connectionString="Data source=DESKTOP-B75U1V5; Initial Catalog=DbARS; user id=sa; password=123" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 </configuration>
