--- a/ARS3/ARS3.csproj
+++ b/ARS3/ARS3.csproj
@@ -147,105 +147,105 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="glance temp\404.html" />
-    <Content Include="glance temp\500.html" />
-    <Content Include="glance temp\blank-page.html" />
-    <Content Include="glance temp\buttons.html" />
-    <Content Include="glance temp\charts.html" />
-    <Content Include="glance temp\compose.html" />
-    <Content Include="glance temp\css\animate.css" />
-    <Content Include="glance temp\css\bootstrap.css" />
-    <Content Include="glance temp\css\custom.css" />
-    <Content Include="glance temp\css\export.css" />
-    <Content Include="glance temp\css\font-awesome.css" />
-    <Content Include="glance temp\css\graph.css" />
-    <Content Include="glance temp\css\jqcandlestick.css" />
-    <Content Include="glance temp\css\monthly.css" />
-    <Content Include="glance temp\css\owl.carousel.css" />
-    <Content Include="glance temp\css\SidebarNav.min.css" />
-    <Content Include="glance temp\css\style.css" />
-    <Content Include="glance temp\fonts\fontawesome-webfont.svg" />
-    <Content Include="glance temp\forms.html" />
-    <Content Include="glance temp\general.html" />
-    <Content Include="glance temp\grids.html" />
-    <Content Include="glance temp\icons.html" />
-    <Content Include="glance temp\images\1.jpg" />
-    <Content Include="glance temp\images\2.jpg" />
-    <Content Include="glance temp\images\3.jpg" />
-    <Content Include="glance temp\images\4.jpg" />
-    <Content Include="glance temp\images\a.png" />
-    <Content Include="glance temp\images\i1.png" />
-    <Content Include="glance temp\images\i2.png" />
-    <Content Include="glance temp\images\i3.png" />
-    <Content Include="glance temp\images\i4.png" />
-    <Content Include="glance temp\images\img-sprite.png" />
-    <Content Include="glance temp\images\img1.png" />
-    <Content Include="glance temp\images\lock.png" />
-    <Content Include="glance temp\images\mail.png" />
-    <Content Include="glance temp\images\search-icon.png" />
-    <Content Include="glance temp\images\slider1.jpg" />
-    <Content Include="glance temp\images\slider2.jpg" />
-    <Content Include="glance temp\images\slider3.jpg" />
-    <Content Include="glance temp\images\slider4.jpg" />
-    <Content Include="glance temp\images\slider5.jpg" />
-    <Content Include="glance temp\images\slider6.jpg" />
-    <Content Include="glance temp\images\slider7.jpg" />
-    <Content Include="glance temp\images\tick.png" />
-    <Content Include="glance temp\images\user.png" />
-    <Content Include="glance temp\images\weather.jpg" />
-    <Content Include="glance temp\inbox.html" />
-    <Content Include="glance temp\index.html" />
-    <Content Include="glance temp\js\amcharts.js" />
-    <Content Include="glance temp\js\bootstrap.js" />
-    <Content Include="glance temp\js\Chart.bundle.js" />
-    <Content Include="glance temp\js\Chart.js" />
-    <Content Include="glance temp\js\Chart.min.js" />
-    <Content Include="glance temp\js\chartinator.js" />
-    <Content Include="glance temp\js\classie.js" />
-    <Content Include="glance temp\js\custom.js" />
-    <Content Include="glance temp\js\export.min.js" />
-    <Content Include="glance temp\js\images\dragIconRoundBig.svg" />
-    <Content Include="glance temp\js\images\lens.svg" />
-    <Content Include="glance temp\js\index.js" />
-    <Content Include="glance temp\js\index1.js" />
-    <Content Include="glance temp\js\index2.js" />
-    <Content Include="glance temp\js\jquery-1.11.1.min.js" />
-    <Content Include="glance temp\js\jquery.flot.js" />
-    <Content Include="glance temp\js\jquery.jqcandlestick.min.js" />
-    <Content Include="glance temp\js\jquery.nicescroll.js" />
-    <Content Include="glance temp\js\light.js" />
-    <Content Include="glance temp\js\metisMenu.min.js" />
-    <Content Include="glance temp\js\modernizr.custom.js" />
-    <Content Include="glance temp\js\monthly.js" />
-    <Content Include="glance temp\js\owl.carousel.js" />
-    <Content Include="glance temp\js\pie-chart.js" />
-    <Content Include="glance temp\js\scripts.js" />
-    <Content Include="glance temp\js\serial.js" />
-    <Content Include="glance temp\js\SidebarNav.min.js" />
-    <Content Include="glance temp\js\SimpleChart.js" />
-    <Content Include="glance temp\js\utils.js" />
-    <Content Include="glance temp\js\validator.min.js" />
-    <Content Include="glance temp\login.html" />
-    <Content Include="glance temp\media.html" />
-    <Content Include="glance temp\signup.html" />
-    <Content Include="glance temp\tables.html" />
-    <Content Include="glance temp\typography.html" />
-    <Content Include="glance temp\validation.html" />
-    <Content Include="glance temp\w3layouts-License.txt" />
-    <Content Include="glance temp\widgets.html" />
+    <Content Include="Tmp\404.html" />
+    <Content Include="Tmp\500.html" />
+    <Content Include="Tmp\blank-page.html" />
+    <Content Include="Tmp\buttons.html" />
+    <Content Include="Tmp\charts.html" />
+    <Content Include="Tmp\compose.html" />
+    <Content Include="Tmp\css\animate.css" />
+    <Content Include="Tmp\css\bootstrap.css" />
+    <Content Include="Tmp\css\custom.css" />
+    <Content Include="Tmp\css\export.css" />
+    <Content Include="Tmp\css\font-awesome.css" />
+    <Content Include="Tmp\css\graph.css" />
+    <Content Include="Tmp\css\jqcandlestick.css" />
+    <Content Include="Tmp\css\monthly.css" />
+    <Content Include="Tmp\css\owl.carousel.css" />
+    <Content Include="Tmp\css\SidebarNav.min.css" />
+    <Content Include="Tmp\css\style.css" />
+    <Content Include="Tmp\fonts\fontawesome-webfont.svg" />
+    <Content Include="Tmp\forms.html" />
+    <Content Include="Tmp\general.html" />
+    <Content Include="Tmp\grids.html" />
+    <Content Include="Tmp\icons.html" />
+    <Content Include="Tmp\images\1.jpg" />
+    <Content Include="Tmp\images\2.jpg" />
+    <Content Include="Tmp\images\3.jpg" />
+    <Content Include="Tmp\images\4.jpg" />
+    <Content Include="Tmp\images\a.png" />
+    <Content Include="Tmp\images\i1.png" />
+    <Content Include="Tmp\images\i2.png" />
+    <Content Include="Tmp\images\i3.png" />
+    <Content Include="Tmp\images\i4.png" />
+    <Content Include="Tmp\images\img-sprite.png" />
+    <Content Include="Tmp\images\img1.png" />
+    <Content Include="Tmp\images\lock.png" />
+    <Content Include="Tmp\images\mail.png" />
+    <Content Include="Tmp\images\search-icon.png" />
+    <Content Include="Tmp\images\slider1.jpg" />
+    <Content Include="Tmp\images\slider2.jpg" />
+    <Content Include="Tmp\images\slider3.jpg" />
+    <Content Include="Tmp\images\slider4.jpg" />
+    <Content Include="Tmp\images\slider5.jpg" />
+    <Content Include="Tmp\images\slider6.jpg" />
+    <Content Include="Tmp\images\slider7.jpg" />
+    <Content Include="Tmp\images\tick.png" />
+    <Content Include="Tmp\images\user.png" />
+    <Content Include="Tmp\images\weather.jpg" />
+    <Content Include="Tmp\inbox.html" />
+    <Content Include="Tmp\index.html" />
+    <Content Include="Tmp\js\amcharts.js" />
+    <Content Include="Tmp\js\bootstrap.js" />
+    <Content Include="Tmp\js\Chart.bundle.js" />
+    <Content Include="Tmp\js\Chart.js" />
+    <Content Include="Tmp\js\Chart.min.js" />
+    <Content Include="Tmp\js\chartinator.js" />
+    <Content Include="Tmp\js\classie.js" />
+    <Content Include="Tmp\js\custom.js" />
+    <Content Include="Tmp\js\export.min.js" />
+    <Content Include="Tmp\js\images\dragIconRoundBig.svg" />
+    <Content Include="Tmp\js\images\lens.svg" />
+    <Content Include="Tmp\js\index.js" />
+    <Content Include="Tmp\js\index1.js" />
+    <Content Include="Tmp\js\index2.js" />
+    <Content Include="Tmp\js\jquery-1.11.1.min.js" />
+    <Content Include="Tmp\js\jquery.flot.js" />
+    <Content Include="Tmp\js\jquery.jqcandlestick.min.js" />
+    <Content Include="Tmp\js\jquery.nicescroll.js" />
+    <Content Include="Tmp\js\light.js" />
+    <Content Include="Tmp\js\metisMenu.min.js" />
+    <Content Include="Tmp\js\modernizr.custom.js" />
+    <Content Include="Tmp\js\monthly.js" />
+    <Content Include="Tmp\js\owl.carousel.js" />
+    <Content Include="Tmp\js\pie-chart.js" />
+    <Content Include="Tmp\js\scripts.js" />
+    <Content Include="Tmp\js\serial.js" />
+    <Content Include="Tmp\js\SidebarNav.min.js" />
+    <Content Include="Tmp\js\SimpleChart.js" />
+    <Content Include="Tmp\js\utils.js" />
+    <Content Include="Tmp\js\validator.min.js" />
+    <Content Include="Tmp\login.html" />
+    <Content Include="Tmp\media.html" />
+    <Content Include="Tmp\signup.html" />
+    <Content Include="Tmp\tables.html" />
+    <Content Include="Tmp\typography.html" />
+    <Content Include="Tmp\validation.html" />
+    <Content Include="Tmp\w3layouts-License.txt" />
+    <Content Include="Tmp\widgets.html" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="glance temp\fonts\fontawesome-webfont.eot" />
-    <Content Include="glance temp\fonts\fontawesome-webfont.ttf" />
-    <Content Include="glance temp\fonts\fontawesome-webfont.woff" />
-    <Content Include="glance temp\fonts\fontawesome-webfont.woff2" />
-    <Content Include="glance temp\fonts\FontAwesome.otf" />
-    <Content Include="glance temp\fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="glance temp\fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="glance temp\fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="glance temp\fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="Tmp\fonts\fontawesome-webfont.eot" />
+    <Content Include="Tmp\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Tmp\fonts\fontawesome-webfont.woff" />
+    <Content Include="Tmp\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Tmp\fonts\FontAwesome.otf" />
+    <Content Include="Tmp\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Tmp\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Tmp\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Tmp\fonts\glyphicons-halflings-regular.woff2" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
